WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
144255
Fix the !ENABLE(CSS_GRID_LAYOUT) build after
r183370
https://bugs.webkit.org/show_bug.cgi?id=144255
Summary
Fix the !ENABLE(CSS_GRID_LAYOUT) build after r183370
Csaba Osztrogonác
Reported
2015-04-27 02:21:59 PDT
build log: ../../Source/WebCore/rendering/RenderBox.cpp: In member function 'virtual void WebCore::RenderBox::computeLogicalHeight(WebCore::LayoutUnit, WebCore::LayoutUnit, WebCore::RenderBox::LogicalExtentComputedValues&) const': ../../Source/WebCore/rendering/RenderBox.cpp:2715:109: error: 'class WebCore::RenderElement' has no member named 'isRenderGrid' ninja: build stopped: subcommand failed. Fix is coming.
Attachments
Patch
(1.66 KB, patch)
2015-04-27 02:26 PDT
,
Csaba Osztrogonác
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Csaba Osztrogonác
Comment 1
2015-04-27 02:26:45 PDT
Created
attachment 251731
[details]
Patch
Javier Fernandez
Comment 2
2015-04-27 02:52:31 PDT
Wow, I totally forgot about the flag. Sorry about it, the patch indeed fixes the bug.
WebKit Commit Bot
Comment 3
2015-04-27 04:12:02 PDT
Comment on
attachment 251731
[details]
Patch Clearing flags on attachment: 251731 Committed
r183394
: <
http://trac.webkit.org/changeset/183394
>
WebKit Commit Bot
Comment 4
2015-04-27 04:12:07 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug