Fix the !ENABLE(CSS_GRID_LAYOUT) build after r183370 https://bugs.webkit.org/show_bug.cgi?id=144255

Reviewed by Carlos Garcia Campos.

* rendering/RenderBox.cpp:
(WebCore::RenderBox::computeLogicalHeight):


Canonical link: https://commits.webkit.org/162258@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@183394 268f45cc-cd09-0410-ab3c-d52691b4dbfc